--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@ input[type="number"] { width: 80px; }
 </head>
 <body>
 
-<form id="pedidoForm" onsubmit="enviarWhatsApp(event)">
-
+<!-- ====== TÍTULO PRINCIPAL ====== -->
+<header style="background-color:#800080; padding:30px 15px; text-align:center; border-radius:10px; margin-bottom:20px;">
+  <h1 style="color:#fff; font-size:28px; margin:0; font-family:Arial, sans-serif;">
+    CARDÁPIO, PANFLETOS E ARTES PROMOCIONAIS PARA SEU ESTABELECIMENTO
+  </h1>
+</header>
   <body>
 
 <!-- ====== TÍTULO PRINCIPAL ====== -->
