--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head> 
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pedido Cardápio</title>
@@ -21,13 +21,16 @@ input[type="number"] { width: 80px; }
 </head>
 <body>
 
+<form id="pedidoForm" onsubmit="enviarWhatsApp(event)">
+
+  <body>
+
 <!-- ====== TÍTULO PRINCIPAL ====== -->
 <header style="background-color:#800080; padding:30px 15px; text-align:center; border-radius:10px; margin-bottom:20px;">
   <h1 style="color:#fff; font-size:28px; margin:0; font-family:Arial, sans-serif;">
     CARDÁPIO, PANFLETOS E ARTES PROMOCIONAIS PARA SEU ESTABELECIMENTO
   </h1>
 </header>
-  <body>
 
 <form id="pedidoForm" onsubmit="enviarWhatsApp(event)">
 
@@ -41,7 +44,6 @@ input[type="number"] { width: 80px; }
   <p>Nome da Empresa: 
     <input type="text" name="Nome_Empresa" placeholder="Ex: KerolynChan" required>
   </p>
-  
 </section>
 
 <!-- ====== DADOS DA EMPRESA ====== -->
