--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pedido Cardápio</title>
 <style>
+  <style>
   body {
-  font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #ff69b4, #800080); /* degrade rosa → roxo */
-  padding: 20px;
-  min-height: 100vh; /* cobre a tela toda */
-}
-
+    font-family: Arial, sans-serif;
+    background: linear-gradient(135deg, #ff69b4, #800080);
+    padding: 20px;
+    min-height: 100vh;
+  }
   .section { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
   h2 { margin-top: 0; }
   .opcoes-lista { list-style: none; padding-left: 0; }
@@ -29,6 +29,7 @@
   .notes { font-size:14px; color:#555; margin-bottom:10px; }
   .flex-row { display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
 </style>
+
 </head>
 <body>
 
