--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <title>Pedido Cardápio</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #ff69b4, #800080);
-    padding: 20px;
-    min-height: 100vh;
-  }
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ff69b4, #800080, #ff69b4);
+  padding: 20px;
+  min-height: 100vh;
+  margin: 0;
+}
   .section { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
   h2 { margin-top: 0; }
   .opcoes-lista { list-style: none; padding-left: 0; }
