--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <p class="notes">
       ⚠️ Observação: você pode adicionar de <b>1 produto</b> até a quantidade informada no formato escolhido.
-      Não é necessário preencher todos os produtos caso sobre espaço.
+      É necessário preencher todos os produtos sem sobrar espaço em branço, caso nao queira mais produtos escreva (mada) em todos os campos.
     </p>
 
     <h2>Descreva seus Produtos do CARDÁPIO</h2>
