--- a/index.html
+++ b/index.html
@@ -12,44 +12,22 @@
   min-height: 100vh;
   margin: 0;
 }
-.section { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-h2 { margin-top: 0; }
-.opcoes-lista { list-style: none; padding-left: 0; }
-.opcoes-lista li { margin-bottom: 10px; }
-.produto { margin-bottom: 10px; }
-.conteudo-produto { margin-left: 20px; display: none; }
-
-/* 🔥 NOVO ESTILO DO TOTAL */
-.total {
-  font-weight: bold;
-  font-size: 28px;
-  margin-top: 20px;
-  text-align: center;
-  background: linear-gradient(135deg, #ff69b4, #800080);
-  color: #fff;
-  padding: 15px 25px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  letter-spacing: 1px;
-  transition: transform 0.2s ease-in-out;
-}
-.total:hover {
-  transform: scale(1.05);
-}
-.total span {
-  font-size: 32px;
-  color: #ffeb3b;
-}
-
-button { padding: 10px 15px; background-color: #ff69b4; border: none; color: #fff; border-radius: 5px; cursor: pointer; }
-button:hover { background-color: #e055a1; }
-input[type="number"] { width: 100px; }
-header.title { background-color:#800080; padding:30px 15px; text-align:center; border-radius:10px; margin-bottom:20px; }
-header.title h1 { color:#fff; font-size:28px; margin:0; font-family:Arial, sans-serif; line-height:1.2; }
-.small-link { color:#ff69b4; font-weight:bold; text-decoration:none; }
-summary { cursor: pointer; font-weight:600; }
-.notes { font-size:14px; color:#555; margin-bottom:10px; }
-.flex-row { display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
+  .section { background: #fff; padding: 15px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+  h2 { margin-top: 0; }
+  .opcoes-lista { list-style: none; padding-left: 0; }
+  .opcoes-lista li { margin-bottom: 10px; }
+  .produto { margin-bottom: 10px; }
+  .conteudo-produto { margin-left: 20px; display: none; }
+  .total { font-weight: bold; font-size: 18px; margin-top: 20px; }
+  button { padding: 10px 15px; background-color: #ff69b4; border: none; color: #fff; border-radius: 5px; cursor: pointer; }
+  button:hover { background-color: #e055a1; }
+  input[type="number"] { width: 100px; }
+  header.title { background-color:#800080; padding:30px 15px; text-align:center; border-radius:10px; margin-bottom:20px; }
+  header.title h1 { color:#fff; font-size:28px; margin:0; font-family:Arial, sans-serif; line-height:1.2; }
+  .small-link { color:#ff69b4; font-weight:bold; text-decoration:none; }
+  summary { cursor: pointer; font-weight:600; }
+  .notes { font-size:14px; color:#555; margin-bottom:10px; }
+  .flex-row { display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
 </style>
 
 </head>
